--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -430,7 +430,8 @@ ul.thumbnail-buttons {
   max-width: 1500px;
 }
 
-@include media-breakpoint-up(md) {
+// Small devices (landscape phones, less than 768px)
+@include media-breakpoint-down(md) {
   .planting-thumbnail {
     dl.planting-attributes {
       width: 100%;
@@ -461,10 +462,14 @@ ul.thumbnail-buttons {
     display: inline-block;
     padding: 1em;
   }
+  .crop-card {
+    width: 100px;
+  }
 }
 
 // Overrides applying only to mobile view. This must be at the end of the overrides file.
-@include media-breakpoint-up(sm) {
+// Extra small devices (portrait phones, less than 576px)
+@include media-breakpoint-down(xs) {
   .sidebar {
     margin-left: 0;
     border-left: none;
@@ -489,11 +494,12 @@ ul.thumbnail-buttons {
     }
   }
 
-  //.homepage
-  //  .thumbnail
-  //    height: 180px
-
   #maincontainer {
     padding: 10px;
+  }
+  .homepage-cards {
+    .crop-card {
+      width: 50px;
+    }
   }
 }
